implement error response struct
