# middlewares/authentication.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 
 	"github.com/alvinmdj/mygram-api/helpers"
+	"github.com/alvinmdj/mygram-api/models"
 	"github.com/gin-gonic/gin"
 )
 
@@ -11,9 +12,9 @@ func Authentication() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		verifyToken, err := helpers.VerifyToken(c)
 		if err != nil {
-			c.AbortWithStatusJSON(http.StatusUnauthorized, gin.H{
-				"error":   "UNAUTHENTICATED",
-				"message": err.Error(),
+			c.AbortWithStatusJSON(http.StatusUnauthorized, models.ErrorResponse{
+				Error:   "UNAUTHENTICATED",
+				Message: err.Error(),
 			})
 			return
 		}
