# models/commonResponse.go
@@ -3,3 +3,8 @@ package models
 type DeleteResponse struct {
 	Message string `json:"message"`
 }
+
+type ErrorResponse struct {
+	Error   string `json:"error"`
+	Message string `json:"message"`
+}
